--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "starter",
+  "homepage": "https://abineshpanneer.github.io/Personal-portfolio",
+  "name": "stater",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
